--- a/site-out/about.html
+++ b/site-out/about.html
@@ -27,7 +27,7 @@
        <a href="https://kobweb.varabyte.com"><img class="silk-image" style="height: 2rem;" src="/kobweb-logo.png" alt="Kobweb Logo"></a>
        <div class="kobweb-spacer"></div>
        <div class="silk-display-if-at-least-md kobweb-row kobweb-arrange-start kobweb-align-center-vert" style="gap: 1.5rem;">
-        <a class="silk-link silk-link-undecorated silk-link-uncolored" href="/">Home</a><a class="silk-link silk-link-undecorated silk-link-uncolored" href="/about">About</a><button class="silk-button silk-button-circle silk-button-uncolored" style="--silk-button-font-size: var(--silk-font-size-md, 1rem); --silk-button-height: 2.5rem; --silk-button-padding-horizontal: 1rem;" type="button">
+        <a class="silk-link silk-link-undecorated silk-link-uncolored" href="/">Home</a><a class="silk-link silk-link-undecorated silk-link-uncolored" href="/about">About</a><button class="silk-button silk-button-circle silk-button-uncolored" style="--silk-button-font-size: 1em; --silk-button-height: 2.5rem; --silk-button-padding-horizontal: 1rem;" type="button">
          <div class="kobweb-row kobweb-arrange-center kobweb-align-center-vert">
           <svg width="1em" viewbox="0 0 24 24" stroke="currentColor" fill="none" stroke-width="2">
            <g stroke-linejoin="round" stroke-linecap="round">
@@ -45,8 +45,8 @@
          </div></button>
         <div class="kobweb-box kobweb-align-top-start" style="display: none;"></div>
        </div>
-       <div class="silk-display-until-md kobweb-row kobweb-arrange-start kobweb-align-center-vert" style="gap: 0.5rem;">
-        <button class="silk-button silk-button-circle silk-button-uncolored" style="--silk-button-font-size: var(--silk-font-size-md, 1rem); --silk-button-height: 2.5rem; --silk-button-padding-horizontal: 1rem;" type="button">
+       <div class="silk-display-until-md kobweb-row kobweb-arrange-start kobweb-align-center-vert" style="gap: 1.5rem; font-size: 1.5rem;">
+        <button class="silk-button silk-button-circle silk-button-uncolored" style="--silk-button-font-size: 1em; --silk-button-height: 2.5rem; --silk-button-padding-horizontal: 1rem;" type="button">
          <div class="kobweb-row kobweb-arrange-center kobweb-align-center-vert">
           <svg width="1em" viewbox="0 0 24 24" stroke="currentColor" fill="none" stroke-width="2">
            <g stroke-linejoin="round" stroke-linecap="round">
