Remove problematic About section.
It just doesn't look good on mobile.

--- a/site-out/about.html
+++ b/site-out/about.html
@@ -99,7 +99,7 @@
         <h4 id="resources">resources/</h4>
         <ul>
          <li><code>public</code><br>
-           If you want to host any media on your site (such as an icon, an image, text configuration files, movies, fonts, etc.), you should put it under this folder. For example, the file <code>public/images/cat.png</code> would be available at <code>https://(your.site)/images/cat.png</code> when the site was deployed.</li>
+           If you want to host any media on your site (such as an icon, an image, text configuration files, movies, fonts, etc.), you should put it under this folder.</li>
          <li><code>markdown</code><br>
            Any markdown discovered in here by Kobweb at compile time will be converted into pages on your site.</li>
         </ul>
