--- a/site-out/index.html
+++ b/site-out/index.html
@@ -73,10 +73,10 @@
       <div class="page-content kobweb-col kobweb-arrange-top kobweb-align-center-horiz">
        <div class="hero-container kobweb-row kobweb-arrange-start kobweb-align-top">
         <div class="kobweb-box kobweb-align-top-start">
-         <svg class="kobweb-align-top-end-self" style="filter: blur(100px);">
+         <svg class="kobweb-align-top-end-self" style="filter: blur(100px); max-width: 100%;">
           <ellipse cx="50%" cy="50%" rx="50%" ry="50%" fill="rgb(243, 219, 91)"></ellipse>
          </svg>
-         <svg class="kobweb-align-bottom-start-self" style="filter: blur(100px);">
+         <svg class="kobweb-align-bottom-start-self" style="filter: blur(100px); max-width: 100%;">
           <ellipse cx="50%" cy="50%" rx="50%" ry="50%" fill="rgb(60, 131, 239)"></ellipse>
          </svg>
          <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="gap: 2rem; isolation: isolate;">
